# hpc-dl-enhanced

./: .gitignore  EXPERIMENT_TRACKER.md  WRITING_TRACKER.md  pyproject.toml  requirements.txt
notebooks/: 01_data_acquisition_eda.ipynb  02_feature_engineering.ipynb  03_analytical_baselines.ipynb  04_microbenchmark_validation.ipynb  05_classical_ml_baselines.ipynb  06_deep_learning_models.ipynb  07_hybrid_model.ipynb  08_evaluation_and_statistics.ipynb  09_interpretability.ipynb
src/: __init__.py  config.py  features.py  metrics.py  models.py  plotting.py  roofline.py
writing/: build_thesis_doc.py  thesis_draft_notes.docx
